--- a/mingle/pubspec.yaml
+++ b/mingle/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  xrpl_dart: ^7.3.0
+  blockchain_utils: ^5.4.0
+  web_socket_channel: ^3.0.3
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -63,6 +68,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assetskeys
 
   # To add assets to your application, add an assets section, like this:
   # assets:
